feat: user management + role-based security
BACKEND:
- User.java: añadidos promoteToAdmin() y demoteToStudent()
- UserRepository puerto: añadido findAll()
- UserRepositoryJpaAdapter: implementa findAll()
- ListUsersUseCase: lista todos los usuarios
- PromoteUserUseCase: promote/demote con validaciones de dominio
- UserController: GET /api/users, PATCH /api/users/{id}/promote, PATCH /api/users/{id}/demote
- JwtAuthenticationFilter: carga rol del usuario como SimpleGrantedAuthority
- SecurityConfig: /api/users/** requiere hasAuthority(ADMIN)

VERIFICADO:
- Listar usuarios: 200
- Promover STUDENT a ADMIN: 200
- Degradar ADMIN a STUDENT: 200
- Sin token: 401
- Con token STUDENT: 403 (pendiente de verificar en frontend)